--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=0.7, maximum-scale=0.7, user-scalable=no" name="viewport" />
+    <meta content="width=device-width, initial-scale=0.7, maximum-scale=0.7" name="viewport" />
     <title>2048</title>
     <script type="text/javascript">
         var game = {
