--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=width/480, maximum-scale=width/480" name="viewport" />
+    <meta content="width=device-width, initial-scale=device-width/480, maximum-scale=device-width/480" name="viewport" />
     <title>2048</title>
     <script type="text/javascript">
         var game = {
