--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta content="width=480, initial-scale=480/device-width, maximum-scale=480/device-width" name="viewport">
+    <meta content="width=device-width, initial-scale=480/device-width, maximum-scale=480/device-width" name="viewport">
     <title>2048</title>
     <script type="text/javascript">
         var game = {
