--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <meta name="format-detection" content="telephone=no, email=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <title>情侣版2048-7724游戏</title>
+    <title>情侣版2048</title>
     <script src="api3rd.js"></script>
-    <link rel="stylesheet" href="main.css" charset="gbk"/>
+    <link rel="stylesheet" href="main.css" />
 </head>
 <body>
     <script>
@@ -76,7 +76,7 @@
             <div class="bar loading-bar"></div>
         </div>
     </div>
-    <script src="main.js" charset="gbk"></script>
+    <script src="main.js" ></script>
     <script type="text/javascript">
         var _my_list = {
             "0": "单身",
