--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
             </div>
         </div>
         <div class="above-game">
-            <p class="game-intro">1.情侣版，你懂的。</p>
-            <p class="game-intro">2.执子之手，最后是坟墓吗？努力后就知道了！</p>
+            <p class="game-intro">1.情侣版2048。</p>
+            <p class="game-intro">2.你能到白头偕老吗？</p>
         </div>
         <div class="game-container">
             <div class="game-message">
                 <p></p>
                 <div class="lower">
-                    <a class="keep-playing-button" onclick="window.location.reload();">再来一次</a>
-                    <a class="retry-button" href="http://fh326.tk">更多游戏</a>
+                    <a class="keep-playing-button">再来一次</a>
+                    <a class="retry-button" href="http://fh326.tk" style="display:none">更多游戏</a>
                 </div>
             </div>
             <div class="grid-container">
